--- a/index.html
+++ b/index.html
@@ -1,6 +1,71 @@
-<HTML>
- <head>
-     <title>SSBCA</title>
- </head>
 
+ 
+ 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lavanya| Java Developer</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f9;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .container {
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: flex;
+            align-items: center;
+        }
+        .details {
+            flex: 1;
+        }
+        .details h1 {
+            color: #2980b9;
+            margin: 0;
+        }
+        .details p {
+            margin: 5px 0;
+        }
+        .details a {
+            color: #2980b9;
+            text-decoration: none;
+        }
+        .profile-img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            margin-left: 20px;
+        }
+        h2 {
+            color: #2c3e50;
+        }
+        ul {
+            padding-left: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="details">
+            <h1> {Lavanya}</h1>
+            <p><strong>Java Developer | Spring Boot | JPA | REST APIs</strong></p>
+            <p>📍 Gokak,Belgavi India</p>
+            <p>📧 <a href="mailto:sullannavarlavanya@gmail.com">sullannavarlavanya@gmail@gmail.com</a></p>
+            <p>🔗 <a href="https://www.linkedin.com/in/lavanya-sullannavar-40786b320?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a></p>
+            <p>🔗 <a href="https://github.com/lavanya25y/profile/ target="_blank">GitHub</a></p>
+        </div>
+        <img src="https://c.ndtvimg.com/2019-12/5jt9lp48_virat-kohli-instagram_625x300_30_December_19.jpg" alt=" Prasad M" class="profile-img">
+    </div>
+
+</body>
+</html>
 </HTML>
