--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
     <div class="container">
         <div class="details">
-            <h1> {Lavanya}</h1>
+            <h1> Lavanya</h1>
             <p><strong>Java Developer | Spring Boot | JPA | REST APIs</strong></p>
             <p>📍 Gokak,Belgavi India</p>
             <p>📧 <a href="mailto:sullannavarlavanya@gmail.com">sullannavarlavanya@gmail@gmail.com</a></p>
